update kube manifest files for deployment

--- a/config/k8s/route.yaml
+++ b/config/k8s/route.yaml
@@ -1,13 +1,13 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  name: sigstore-demo-app
+  name: quarkus-hello-service-app
   labels:
-    app: sigstore-demo-app
+    app: quarkus-hello-service-app
 spec:
-  host: sigstore-demo-app.apps.sigstore-demo.bcallawa.dev # Modify to use your FQDN e.g. <app-name>.apps.<clustername>.<domain>.
+  host: quarkus-hello-service-app-dev.ibmcloud-roks-9vhwi-6ccd7f378ae819553d37d5f2ee142bd6-0000.us-south.containers.appdomain.cloud # Modify to use your FQDN e.g. <app-name>.apps.<clustername>.<domain>.
   tls:
     termination: edge # Relies on OpenShift setup with Let's Encrypt.
   to:
     kind: Service
-    name: sigstore-demo-app
+    name: quarkus-hello-service-app
