--- a/config/k8s/service.yaml
+++ b/config/k8s/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sigstore-demo-app
+  name: quarkus-hello-service-app
   labels:
-    app: sigstore-demo-app
+    app: quarkus-hello-service-app
 spec:
   ports:
   - port: 8080
     protocol: TCP
     targetPort: 8080
   selector:
-    app: sigstore-demo-app
+    app: quarkus-hello-service-app
   type: ClusterIP
