--- a/config/k8s/deployment.yaml
+++ b/config/k8s/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sigstore-demo-app
+  name: quarkus-hello-service-app
   labels:
-    app: sigstore-demo-app
+    app: quarkus-hello-service-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: sigstore-demo-app
+      app: ztsc-quarkus-hello-service-app
   template:
     metadata:
       labels:
-        app: sigstore-demo-app
+        app: ztsc-quarkus-hello-service-app
     spec:
       containers:
-        - name: sigstore-demo-app
+        - name: ztsc-quarkus-hello-service-app
           image: quay.io/ifont/sigstore-demo-app:latest
           ports:
             - containerPort: 8080
